# krapbott

./: .env  .gitignore  Cargo.toml  Config.json  commands.db  commands.db-shm  commands.db-wal  env.env  queue.db  queue.json  queue_dock.html  text  user.db
.sqlx/: query-00638e356f0a1e3475bdd942d04f0c04cc41fe5b3e98a12c07a3b3431fc4533b.json  query-021e3892b5f3f44c938b17c09b0fea42289395de0bd2b238877cf483a5e611a1.json  query-030d90d29967a111bfea808d4ca3f944aba42dbe8b2e96c476556bf76e4f0463.json  query-042c92b58067d8958e71ab82177428cb97eeff9ed79719ce7407979bf04bf5d9.json  query-049b77b1aca5a7f6fb6388fbe237fb57a40d769ebf1c463437ae57e5389588e8.json  query-06018c3c9774035e5e482b4c3e2977ebfd998166b436626fb512cee8eba2a59f.json  query-08ed80ea1a1584dc74350b812479b35a25d3aef15df3d50948d5cac074704161.json  query-094ae2a31d94d102cc41992c6bb93282b88284da2e1ef2da1115ae81e088da3c.json  query-1042ac8ee52202e6d4766fb482048dc004306c0fa16f286c3ed16fe22f263c52.json  query-106800a1920b347ed9e098265ddf3fe9e79ef5a4eead69e948ac5a3b0e98200a.json  query-109dacbab75912cdf48fc1e131c30d6cc9e663be34e090b348fbcb5b62a4714e.json  query-118da5665534a662fd3ced9e983f5b7bcf52f9fe7c2a018b29ee828d06407865.json  query-12b717263ed544da5e7ba4cbf34efc8b92ca732928aeb94835498f683bfac4c5.json  query-12efedf17122c59aab5ceb16cb81484266d45be14caec71675245671fd19bed2.json  query-1330707ec51ca4529ad70ff25bafbac9646f533a0f29f10832c9b09b3162e29f.json  query-147144e7f5b565907707ac63553c8431fdac78165ac19091eb06b6328626f668.json  query-14a1709afea2f5a3f959fdef0a155959dab1d6264e8e86322b2d468cf503aca6.json  query-15767f2a5a088f383052180d1e55a69cb4f41490446ff16d72608db859c6fefb.json  query-1821362f1a385e2b63ecd2670a190cbeffbf218011066d73d81dc5fb247e4683.json  query-182c44350e25956008fad3eab47793d404cceb60e146652e7b2c4bd28b4c1711.json  query-1d4fa63ce3b721171368165124288357cea5042658c1a7a2249ba3b1ec248bc7.json  query-213b339e259f03eeebb344c4199cf0b0d412fadd541630ffff1c1d0249ce161f.json  query-259193863957ebb99c39c5351181b1a8780d87a1f2654db6507abe839e0f2681.json  query-25d5d2db5718bbbe26a4e447f3ae34a4275d6107d0e419432dc82775d0f48fd5.json  query-291423fe8939b28aadeb6debfbb3c9ca108dd92668512b99038d47df8561a256.json  query-29fa20d594e007a3f08835117d6a8ceb3cfa8b143bfcd16a851fad95e76378ba.json  query-2aea9e66c137627ea9aa50ac38a9d97da636374c2e5c59f5c99be5d9934bde90.json  query-2cc1fc8c8e6a2cdc549dd41ec26d2e9bf6d8624813674299a1a15729e95e5895.json  query-2d9890280c04baa143f9a23dbf1ea14d2067762315ebf7557f97bd4dd8dc3216.json  query-2dc47e1c587cda1fa7d4ac48881b9f8ede452f3ef0426caad2c117cbcb2c68d8.json  query-2e1d4fa7d49d127eadf22d6839dac005b3fcf0727f0c9e1d5296f726ffa56258.json  query-313fb17a460b06d5d9e233c108de746aa20201849da6266d291b919209c3a2e5.json  query-31ac09a8b78ddbb2a8b9962380209834d96895fd178ded39045264fd81c266c1.json  query-326700536a327984322d0afc361108f30d4c6d2c104989b1e3f57da91357f92f.json  query-32d060ef56457df05c2a2d22c7aa64a0a77d3dc9d7e30e5981f4160a6df6a43a.json  query-373f89c776a0bcbd5caead92ce6bf1dc2e39c89f616a665eb6076999b3109660.json  query-37e2b0734af7beb5f3b3445de6b431b83bad1a466d7bedbff02791732e4bfafd.json  query-39cc56e91b32e6ddaf30711cec2b640dec878fa994e83643275e125a9bdcd2b0.json  query-39e175c76e1d78dbd32df3ab63b99afbdb86390802ac8d1a8f36cdae01230c1e.json  query-39ec4b0bd3ee5d921a1ce43a80c87987c6c76e95f2ea205f293f3e1ea842895a.json  (+123 more)
configs/: config.json  krapmatt.json  nyc62truck.json  samoan_317.json  therayii.json
logs/: krapbott.log.2025-07-10  krapbott.log.2025-07-11  krapbott.log.2025-08-22
migrations/: commands.db  (+2 more)
(+83 files in other folders)
