[package]
name = "krapbott"
version = "3.0.0"
edition = "2021"
include = ["public/*"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.47.1", features = ["full"] }
serde_json = "1.0.140"
serde = {version = "1.0.222", features = ["derive"]}
dotenvy = "0.15.7"
reqwest = {version = "0.12.23", features = ["json"]}
regex = "1.11.2"
lazy_static = "1.5.0"
futures = "0.3.31"
chrono = "0.4.41"
chrono-tz = "0.10.3"
tokio-tungstenite = "0.27.0"
# warp = { version = "0.3.7", features = ["tls"] }
rand = "0.9.2"
serde_millis = "0.1.1"
sqlx = { version = "0.8.6", features = ["runtime-tokio", "postgres", "chrono", "time" ] }
unicode-normalization = "0.1.24"
unicode-general-category = "1.0.0"
uuid = { version = "1.18.1", features = ["v4"] }
notify = "8.2.0"
tracing = "0.1"
tracing-log = "0.2.0"
tracing-subscriber = "0.3.20"
tracing-appender = "0.2"
thiserror = "2.0.16"
twitch-irc = "5.0.1"
shuttle-runtime = "0.57.0"
shuttle-warp = "0.57.0"
shuttle-shared-db = {version = "0.57.0", features = ["sqlx", "postgres"]}
include_dir = "0.7"
dashmap = "5"