[package]
name = "krapbott"
version = "3.0.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.48.0", features = ["full"] }
serde_json = "1.0.148"
serde = {version = "1.0.228", features = ["derive"]}
dotenvy = "0.15.7"
reqwest = {version = "0.13.1", features = ["json"]}
regex = "1.12.2"
lazy_static = "1.5.0"
futures = "0.3.31"
chrono = "0.4.42"
chrono-tz = "0.10.4"
tokio-tungstenite = { version = "0.28.0", features = ["rustls-tls-webpki-roots"] }
rand = "0.9.2"
base64 = "0.22.1"
sha2 = "0.10.8"
serde_millis = "0.1.1"
sqlx = { version = "0.8.6", features = ["runtime-tokio", "postgres", "chrono", "time", "macros" ] }
unicode-normalization = "0.1.25"
unicode-general-category = "1.1.0"
uuid = { version = "1.19.0", features = ["v4"] }
notify = "8.2.0"
tracing = "0.1.44"
tracing-log = "0.2.0"
tracing-subscriber = "0.3.22"
tracing-appender = "0.2.4"
thiserror = "2.0.17"
include_dir = "0.7"
dashmap = "6.1.0"
kick-rust = "0.1.0"
once_cell = "1.21.3"
urlencoding = "2.1.3"
async-stream = "0.3.6"
warp = { version = "0.4.2", features = ["server"]}
twitch-irc =  { version = "5.0.1", features = ["transport-tcp", "transport-ws", "transport-ws-rustls-webpki-roots"] }
